--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "tailwindcss": "^3.0.23",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@nuxt/types": "~2.15.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "postcss": "^8.4.4"
   }
